duicontrolpanel (0.8.3~unreleased) unstable; urgency=low

  * Some margin fixes

 -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 22 Jun 2010 15:57:07 +0200

duicontrolpanel (0.8.2) unstable; urgency=low

  * new version

 -- Laszlo Gal <laszlo.gal@blumsoft.eu>  Mon, 20 Jun 2010 10:32:00 +0200

duicontrolpanel (0.8.2~unreleased) unstable; urgency=low

  * new version

 -- Robert Manner <robert.manner@blumsoft.eu>  Thu, 10 Jun 2010 18:50:33 +0200

duicontrolpanel (0.8.1) unstable; urgency=low

  [ Sandor Pinter ]
  * Enable booster usage, and remove the forking for this

  [ Robert Manner ]
  * Fixes: NB#172559 - Time and Language UI display some hard coded
    button (Display language and Keyboard languages)

 -- Robert Manner <robert.manner@blumsoft.eu>  Thu, 10 Jun 2010 18:01:22 +0200

duicontrolpanel (0.8.0) unstable; urgency=low

  [ Sandor Pinter ]
  * Fixing Coverity issues

  [ Robert Manner ]
  * Fixes: NB#171520 - The View Menu should not be available on Region
    format setting view
  * Adds API for accessing the progress indicator of the page from
    DcpWidget
  * Removes the deprecated classes DcpButton* and DcpBriefWidget
  * 'Applications' category is sorted by applet titles instead of the Order
    specified in the desktop file (like other categories)
  * Fixes: NB#169944 - Recently Used list in DCP is sorted improperly

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 02 Jun 2010 17:36:26 +0200

duicontrolpanel (0.7.20) unstable; urgency=low

  * changelog
  * Workaround for NB#170026 - Emitting valuesChanged signal doesnt update
    valueText displayed in Brief (temporary workaround for NB#170105 -
    showhideEvent of MContentItem does not get called)

 -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 25 May 2010 10:04:05 +0200

duicontrolpanel (0.7.19-1) unstable; urgency=low

  * Fixes endless recursion when there is no dbus available
  * Fixes: NB#166112 - DuiControlPanel should apply to swap itself to