@@ -24,14 +24,6 @@
 #include "dcpdebug.h"
 
 
-/* FIXME: this is a workaround against bug NB#170105 -
- * show/hideEvent of MContentItem does not get called
- *
- * Remove it once the bug is solved.
- */
-#define NB170105
-
-
 DcpContentItemPrivate::DcpContentItemPrivate ():
     m_Applet (0),
     m_WidgetTypeId (DcpWidgetType::Label),
@@ -85,8 +77,6 @@ DcpContentItem::constructRealWidget ()
             model()->setItemStyle(SingleTextLabel);
             break;
     }
-
-    updateContents ();
 }
 
 DcpAppletObject *
@@ -123,10 +113,6 @@ DcpContentItem::setApplet (DcpAppletObject *applet)
          */
         connect (this, SIGNAL (clicked()),
                 d_ptr->m_Applet, SLOT (slotClicked()));
-#       ifdef NB170105
-        connect (d_ptr->m_Applet, SIGNAL (briefChanged ()), 
-                 this, SLOT (updateContents()));
-#       endif // NB170105
     }
 }
 
@@ -294,7 +280,6 @@ DcpContentItem::setImageFromFile (const QString& fileName)
 void
 DcpContentItem::showEvent (QShowEvent * event)
 {
-#       ifndef NB170105
     if (d_ptr->m_Hidden) {
         // prevents multiple showEvents coming
         d_ptr->m_Hidden = false;
@@ -305,14 +290,12 @@ DcpContentItem::showEvent (QShowEvent * event)
 
         updateContents();
     }
-#       endif // NB170105
     MContentItem::showEvent(event);
 }
 
 void
 DcpContentItem::hideEvent (QHideEvent * event)
 {
-#       ifndef NB170105
     if (!d_ptr->m_Hidden) {// prevents multiple hideEvents coming
         d_ptr->m_Hidden = true;
 
@@ -320,7 +303,6 @@ DcpContentItem::hideEvent (QHideEvent * event)
             disconnect (d_ptr->m_Applet, SIGNAL (briefChanged()),
                 this, SLOT (updateContents()));
     }
-#       endif // NB170105
     MContentItem::hideEvent(event);
 }
 
