@@ -84,7 +84,6 @@ void Ut_DcpContentItem::testRetranslateUi()
 
 void Ut_DcpContentItem::testShowHideEvent()
 {
-    QSKIP ("NB#170105 meegotouch bug", SkipSingle);
     DcpAppletObject* applet =
         new DcpAppletObject(new DcpAppletMetadata("fake"));
     m_Target->setApplet (applet);
