@@ -1,6 +1,8 @@
 duicontrolpanel (0.8.3~unreleased) unstable; urgency=low
 
   * Some margin fixes
+  * Fixes: NB#170026 - Emitting valuesChanged signal doesn't update
+    valueText displayed in Brief (removes the workaround, because bug got fixed)
 
  -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 22 Jun 2010 15:57:07 +0200
 
